<resources>
    <string name="app_name">酷鸟</string>
    <string name="action_settings">设置</string>
    <string name="canceled">已取消</string>
    <string name="cancel">取消</string>
    <string name="accept">确定</string>
    <string name="rmb">￥</string>
    <string name="from">来自</string>
    <string name="no_more_data">没有更多数据了~</string>
    <string name="is_loading">正在加载&#8230;</string>
    <string name="loading_finish">加载完成</string>
    <string name="collect_fail">收藏失败</string>
    <string name="commit_order_review_fail">提交订单点评失败</string>
    <string name="add_collect_success">添加收藏成功</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="load_hot_city_list_fail">获取热门城市列表失败</string>
    <string name="move_and_scale">移动和缩放</string>
    <string name="share">分享</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="call">呼叫</string>
    <string name="net_err">网络出错，请检查网络设置</string>
    <string name="no_big_img">没有大图</string>
    <string name="receive">接收</string>
    <string name="confuse">拒绝</string>
    <string name="handle">处理：</string>
    <string name="starting">出发地</string>
    <string name="recommend_tips">以下是酷鸟推荐线路</string>
    <string name="load_current_travel_fail">获取当前行程失败</string>
    <string name="load_travel_list_fail">获取行程列表失败</string>
    <string name="love">想去</string>
    <string name="download">下载</string>
    <string name="downloading">正在下载</string>
    <string name="add_travel">添加行程</string>
    <string name="look_comment">查看点评</string>
    <string name="travel_comment_reply">回复评论</string>
    <string name="commit_comment_success">提交评论成功</string>
    <string name="commit_comment_fail">提交评论失败</string>
    <string name="travel_feedback">行程反馈</string>
    <string name="travel_route">行程线路</string>
    <string name="travel_service">行程服务</string>
    <string name="travel_food">行程餐饮</string>
    <string name="submit">提交</string>
    <string name="user_comment">用户点评</string>
    <string name="look_travel_rating">查看行程评分</string>
    <string name="travel_plan">行程规划</string>
    <string name="hint_comment">至少吐槽10个字嘛</string>
    <string name="hint_cancel">请简单描述取消订单的原因</string>
    <string name="comment_max_count">400</string>
    <string name="comment_publish">发表</string>
    <string name="qrcode_share">扫二维码分享该行程</string>
    <string name="mine_travel">我的行程</string>
    <string name="please_input_correct_date">请输入正确的日期</string>
    <string name="sure_delete_travel">确定要删除该条行程吗？</string>
    <string name="starting_today">今日出发</string>
    <string name="download_fail">下载失败</string>
    <string name="load_mine_travel_list_fail">获取我的行程失败</string>
    <string name="delete_mine_travel_fail">删除我的行程失败</string>
    <string name="set_mine_travel_date_fail">设置行程时间失败</string>
    <string name="set_current_travel_fail">设置当前行程失败</string>
    <string name="cancel_current_travel_fail">取消当前行程失败</string>
    <string name="setting_travel_fail">设置行程失败</string>
    <string name="load_travel_detail_fail">获取行程详情失败</string>
    <string name="download_offline_fail">下载离线失败</string>
    <string name="check_offline_update_fail">检查离线更新失败</string>
    <string name="load_rollcall_list_fail">获取点名列表失败</string>
    <string name="very_satisfaction">非常满意</string>
    <string name="satisfaction">满意</string>
    <string name="gernal_satisfaction">一般</string>
    <string name="yawp">不满意</string>
    <string name="very_yawp">非常不满意</string>
    <string name="travel_detail">行程详细</string>
    <string name="scenic_detail">景点详细</string>
    <string name="hotel_detail">酒店详细</string>
    <string name="food_detail">美食详细</string>
    <string name="amusement_detail">娱乐详细</string>
    <string name="event_detail">事件详细</string>
    <string name="traffic_detail">交通详细</string>
    <string name="shopping_detail">购物详细</string>
    <string name="to_the_top">返回顶部</string>
    <string name="ta_line">TA的线路</string>
    <string name="travel_detail_fee">费用说明</string>
    <string name="around_maps">附近节点地图</string>
    <string name="qrcode_scan_request_fail">二维码扫描请求错误</string>
    <string name="travel_state_finish">已结束</string>
    <string name="travel_state_ing">进行中</string>
    <string name="travel_state_dns">未开始</string>
    <string name="travel_state_ns">待出游</string>
    <string name="please_select_city">请选择出发城市</string>
    <string name="lifestyle">吃喝玩乐</string>
    <string name="hotel">酒店</string>
    <string name="food">美食</string>
    <string name="amusement">娱乐</string>
    <string name="shopping">购物</string>
    <string name="scenic">景点</string>
    <string name="travel">行程</string>
    <string name="location_ticket_type">景点门票</string>
    <string name="order">订单</string>
    <string name="order_detail">订单详细</string>
    <string name="count">数量：</string>
    <string name="order_way">预订方式：</string>
    <string name="order_price">订单价格：</string>
    <string name="order_product_code">产品编号：</string>
    <string name="order_num">订单号：</string>
    <string name="order_buy_time">预订日期：</string>
    <string name="order_start_date">出发日期：</string>
    <string name="selected_date">所选日期：</string>
    <string name="order_people_count">出游人数：</string>
    <string name="order_come_from">订单来自于</string>
    <string name="spread_shop">传播店</string>
    <string name="order_status_tips_handling">工作人员正在进行确认，请耐心等待</string>
    <string name="order_status_tips_consult_customer">如有问题请咨询客服</string>
    <string name="order_status_tips_part_of_collection">准备出团，如有问题请咨询客服</string>
    <string name="order_status_tips_have_a_ball">祝出游愉快，如有问题请咨询客服</string>
    <string name="home_page">首页</string>
    <string name="store">店铺</string>
    <string name="discovery">发现</string>
    <string name="around">附近</string>
    <string name="mine">我的</string>
    <string name="line">线路</string>
    <string name="category_scenic">景点门票</string>
    <string name="category_shopping">购物优惠</string>
    <string name="category_amusement">休闲娱乐</string>
    <string name="category_food">餐饮美食</string>
    <string name="category_traffic">交通</string>
    <string name="category_group_product">组合产品</string>
    <string name="combine_product_desc">组合介绍</string>
    <string name="double_click_to_exit">再按一次退出程序</string>
    <string name="product_desc">产品介绍</string>
    <string name="default_city_gz">广州</string>
    <string name="scan_tips">扫线路对应的二维码</string>
    <string name="flicking">扫一扫</string>
    <string name="my_store">我的店铺</string>
    <string name="load_ad_list_fail">获取广告列表失败</string>
    <string name="load_product_list_fail">获取产品列表失败</string>
    <string name="unit_point">分</string>
    <string name="unit_person">人</string>
    <string name="search">搜索</string>
    <string name="relevant_line">相关的线路</string>
    <string name="relevant_group_product">相关的组合产品</string>
    <string name="relevant_hotel">相关的酒店</string>
    <string name="relevant_location_ticket">相关的景点门票</string>
    <string name="relevant_food">相关的餐饮美食</string>
    <string name="relevant_shopping">相关的购物优惠</string>
    <string name="relevant_amusement">相关的休闲娱乐</string>
    <string name="relevant_traffic">相关的交通</string>
    <string name="please_input_search_keywords">请输入正确搜索关键字</string>
    <string name="product_search_hint">请输入产品名\\线路名\\目的地</string>
    <string name="product_detail">产品详细</string>
    <string name="reserve_attention">预订须知</string>
    <string name="product_comment">评价</string>
    <string name="product_select">选择：套餐/时间/人数</string>
    <string name="detail">详情</string>
    <string name="load_product_detail_fail">获取产品详情失败</string>
    <string name="load_product_comments_fail">获取产品评论列表失败</string>
    <string name="load_product_lists_fail">获取产品列表失败</string>
    <string name="call_customer_service">拨打客服电话</string>
    <string name="customer_service_null">没有客服电话</string>
    <string name="dial">拨打</string>
    <string name="product_reserve_now">立即预订</string>
    <string name="delete">删除</string>
    <string name="grounding">上架</string>
    <string name="sloadout">下架</string>
    <string name="all">全部</string>
    <string name="type_all">全部分类</string>
    <string name="status_in_the_sale">在售中</string>
    <string name="status_all">所有产品</string>
    <string name="status_have_the_shelf">已下架</string>
    <string name="add_product">添加产品</string>
    <string name="commission_description">返佣说明</string>
    <string name="commission_desc_tips">返佣按成交金额</string>
    <string name="commission_desc_tips_one">按每个产品</string>
    <string name="commission_desc_tips_two">元返佣</string>
    <string name="product_library">分销库</string>
    <string name="save">保存</string>
    <string name="added_product_empty">您未选择产品</string>
    <string name="save_count_zero">(0)</string>
    <string name="store_order">店铺订单</string>
    <string name="store_sale_statistics">销售统计</string>
    <string name="store_product_manage">产品管理</string>
    <string name="store_enter">进入店铺</string>
    <string name="store_commission_manage">佣金管理</string>
    <string name="store_client_manage">客户管理</string>
    <string name="store_message">店铺消息</string>
    <string name="swtich_store">切换店铺</string>
    <string name="store_setting">店铺设置</string>
    <string name="store_logo">店铺LOGO</string>
    <string name="store_bg">店铺背景图</string>
    <string name="store_name">店铺名称</string>
    <string name="store_contact_phone">联系电话</string>
    <string name="load_store_info_fail">获取店铺信息失败</string>
    <string name="load_store_order_fail">获取订单列表失败</string>
    <string name="has_no_contact_phone">暂无联系方式</string>
    <string name="load_store_fail">获取店铺失败</string>
    <string name="store_status_pause">旅游店铺已暂停营业</string>
    <string name="store_status_pause_reson">原因：</string>
    <string name="update_store_info_fail">修改店铺信息失败</string>
    <string name="open_store">开店</string>
    <string name="hint_open_store_name">店铺名称</string>
    <string name="hint_open_store_contact_phone">手机号码(获取佣金凭证之一)</string>
    <string name="please_input_store_name">给店铺一个名字吧！</string>
    <string name="please_input_store_contact_phone">请输入11位手机号！</string>
    <string name="open_store_success">开店成功</string>
    <string name="open_store_tips_one">已阅读并同意店铺</string>
    <string name="open_store_agreement">使用协议</string>
    <string name="order_check">订单查看</string>
    <string name="order_manage">订单管理</string>
    <string name="order_number">订单号：</string>
    <string name="order_status_cacelled">已取消</string>
    <string name="order_status_confirm">已确认</string>
    <string name="order_status_part_collection">部分收款</string>
    <string name="processing">处理中</string>
    <string name="confirmed">已确认</string>
    <string name="closed">已关闭</string>
    <string name="money_receipt">全部收款</string>
    <string name="unsubcribed">已退订</string>
    <string name="have_a_ball">已出团</string>
    <string name="part_of_collection">部分收款</string>
    <string name="distribution">分销&#160;&#160;</string>
    <string name="update_order_status">更改订单状态</string>
    <string name="update_order_status_success">更改订单状态成功</string>
    <string name="none">无</string>
    <string name="no_related_data">暂无相关数据！</string>
    <string name="store_in_sale_statistics">店铺销售统计</string>
    <string name="product_in_sale_statistics">产品销售统计</string>
    <string name="order_statistics">订单总计：</string>
    <string name="commission_statistics">佣金总计：</string>
    <string name="order_turnover">共成交订单：</string>
    <string name="name">姓名</string>
    <string name="mobile">手机</string>
    <string name="mobile_num">手机号</string>
    <string name="participant">参与人</string>
    <string name="participant_name">参与人姓名</string>
    <string name="certificate_type">证件类型</string>
    <string name="certificate_type_id_card">身份证</string>
    <string name="certificate_type_other">其他</string>
    <string name="certificate_code">证件号码</string>
    <string name="comment">点评</string>
    <string name="cancel_reason">取消理由</string>
    <string name="write_wrong">填写信息错误</string>
    <string name="resubmit">重复提交</string>
    <string name="no_buy_le">不想买了</string>
</resources>