<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/baseLayoutMMStyle"
    android:background="@color/translucence_black_dark"
    android:scrollbars="none" >

    <LinearLayout
        style="@style/baseLinearLayoutMWVerticalStyle"
        android:background="@color/white" >

        <include layout="@layout/divider_line_full" />

        <TextView
            android:id="@id/tv_type_all"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/type_all"
            android:textColor="@color/v020202"
            android:textSize="15sp" />

        <include layout="@layout/divider_line_full" />

        <TextView
            android:id="@id/tv_type_line"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/line"
            android:textColor="@color/v020202"
            android:textSize="15sp" />

        <include layout="@layout/divider_line_full" />

        <TextView
            android:id="@id/tv_type_hotel"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/hotel"
            android:textColor="@color/v020202"
            android:textSize="15sp" />

        <include layout="@layout/divider_line_full" />

        <TextView
            android:id="@id/tv_type_location_ticket"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/location_ticket_type"
            android:textColor="@color/v020202"
            android:textSize="15sp" />

        <include layout="@layout/divider_line_full" />

        <TextView
            android:id="@id/tv_type_category_amusement"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/category_amusement"
            android:textColor="@color/v020202"
            android:textSize="15sp" />

        <include layout="@layout/divider_line_full" />

        <TextView
            android:id="@id/tv_type_category_food"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/category_food"
            android:textColor="@color/v020202"
            android:textSize="15sp" />

        <include layout="@layout/divider_line_full" />

        <TextView
            android:id="@id/tv_type_category_shopping"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/category_shopping"
            android:textColor="@color/v020202"
            android:textSize="15sp" />

        <include layout="@layout/divider_line_full" />

        <TextView
            android:id="@id/tv_type_category_group_product"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/category_group_product"
            android:textColor="@color/v020202"
            android:textSize="15sp" />

        <include layout="@layout/divider_line_full" />
    </LinearLayout>

</ScrollView>