<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/baseLinearLayoutMMVerticalStyle"
    android:background="@color/main_bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white" >

        <ImageView
            android:id="@id/iv_go_back"
            style="@style/baseLayoutWWStyle"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:contentDescription="@null"
            android:src="@drawable/titlebar_backward_kooniao_selector" />

        <TextView
            style="@style/baseLayoutWMStyle"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/cancel_reason"
            android:textColor="@color/v020202"
            android:textSize="18sp" />
    </RelativeLayout>

    <include layout="@layout/divider_line_full" />

    <LinearLayout
        style="@style/baseLinearLayoutMWVerticalStyle"
        android:background="@color/white"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:id="@+id/tv_writewrong"
            style="@style/baseLayoutMWStyle"
            android:layout_height="55dp"
            android:gravity="center|left"
            android:text="@string/write_wrong"
            android:textSize="17sp" />

        <include layout="@layout/divider_line_full" />

        <TextView
            android:id="@+id/tv_resubmit"
            style="@style/baseLayoutMWStyle"
            android:layout_height="55dp"
            android:gravity="center|left"
            android:text="@string/resubmit"
            android:textSize="17sp" />

        <include layout="@layout/divider_line_full" />

        <TextView
            android:id="@+id/tv_no_buy_le"
            style="@style/baseLayoutMWStyle"
            android:layout_height="55dp"
            android:gravity="center|left"
            android:text="@string/no_buy_le"
            android:textSize="17sp" />

        <include layout="@layout/divider_line_full" />

        <TextView
            android:id="@+id/tv_other"
            style="@style/baseLayoutMWStyle"
            android:layout_height="55dp"
            android:gravity="center|left"
            android:text="@string/certificate_type_other"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_order_review_content"
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:layout_marginBottom="10dp"
            android:background="@color/vf5f5f5"
            android:gravity="top|left"
            android:hint="@string/hint_cancel"
            android:maxLength="400"
            android:padding="5dp"
            android:textColorHint="@color/vd0d0d0"
            android:textSize="16sp"
            android:visibility="gone" />


    </LinearLayout>

    <include layout="@layout/divider_line_full" />
    
        <Button
            android:id="@+id/bt_order_review_commit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_round_button_selector"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="17sp" />

</LinearLayout>